--- a/src/content/docs/docs/guides/docker-env-basic/docker-compose.yaml
+++ b/src/content/docs/docs/guides/docker-env-basic/docker-compose.yaml
@@ -1,8 +1,8 @@
 services:
   web:
-    image: "${WEB_IMAGE:?error}"
-    container_name: "${WEB_NAME:?error}"
+    image: '${WEB_IMAGE:?error}'
+    container_name: '${WEB_NAME:?error}'
     ports:
-      - "${WEB_PORT:?error}:80"
+      - '${WEB_PORT:?error}:80'
     environment:
       - APP_ENV=${APP_ENV:?error}
