--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "dependencies": {
     "@astrojs/mdx": "^4.2.4",
     "@astrojs/sitemap": "^3.3.0",
-    "@astrojs/starlight": "^0.33.2",
-    "@astrojs/starlight-tailwind": "^3.0.1",
-    "@astrojs/tailwind": "^6.0.2",
-    "@tailwindcss/vite": "^4.0.0",
-    "astro": "^5.7.1",
+    "@astrojs/starlight": "^0.34.0",
+    "@astrojs/starlight-tailwind": "^4.0.1",
+    "@fontsource/inter": "^5.2.5",
+    "@fontsource/poppins": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.4",
+    "astro": "^5.7.4",
     "sharp": "^0.33.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "prettier": "^3.4.2"
