ci: add linting step
Signed-off-by: Philip Miglinci <pmig@glasskube.com>

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "lint": "prettier --check .",
     "format": "prettier --write ."
   },
   "dependencies": {
