--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -24,6 +24,8 @@ jobs:
           cache-dependency-path: package-lock.json
       - name: Install dependencies
         run: npm i
+      - name: Lint with prettier
+        run: npm run lint
       - name: Build website
         run: npm run build
       - uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
