--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "astro": "^5.7.4",
     "mermaid": "^11.6.0",
     "sharp": "^0.34.0",
+    "starlight-links-validator": "^0.16.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
