--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "prettier-plugin-organize-imports": "^4.1.0"
   }
 }
