--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -26,6 +26,8 @@ jobs:
         run: npm i
       - name: Lint with prettier
         run: npm run lint
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps chromium
       - name: Build website
         run: npm run build
       - uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
