--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -22,12 +22,21 @@ jobs:
           node-version: '22.15'
           cache: npm
           cache-dependency-path: package-lock.json
+      - uses: actions/cache@v2
+        id: playwright-cache
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
       - name: Install dependencies
         run: npm i
       - name: Lint with prettier
         run: npm run lint
-      - name: Install playwright browsers
+      - name: Install playwright browser
+        if: steps.playwright-cache.outputs.cache-hit == 'false'
         run: npx playwright install --with-deps chromium
+      - name: Install playwright browser from cache
+        if: steps.playwright-cache.outputs.cache-hit == 'true'
+        run: npx playwright install-deps
       - name: Build website
         run: npm run build
       - uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
