--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -22,11 +22,16 @@ jobs:
           node-version: '22.15'
           cache: npm
           cache-dependency-path: package-lock.json
+      - uses: actions/cache@v4
+        id: playwright-cache
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
       - name: Install dependencies
         run: npm i
       - name: Lint with prettier
         run: npm run lint
-      - name: Install playwright browsers
+      - name: Install playwright browser
         run: npx playwright install --with-deps chromium
       - name: Build website
         run: npm run build
