--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -18,25 +18,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4
         with:
-          node-version: '24.1'
-          cache: npm
-          cache-dependency-path: package-lock.json
+          version: 10
+      - uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v5
+        with:
+          node-version: '24.10'
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
       - uses: actions/cache@v4
         id: playwright-cache
         with:
           path: ~/.cache/ms-playwright
-          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
+          key: ${{ runner.os }}-playwright-${{ hashFiles('pnpm-lock.yaml') }}
       - name: Install dependencies
-        run: npm i
+        run: pnpm i
       - name: Lint with prettier
-        run: npm run lint
+        run: pnpm run lint
       - name: Install playwright browser
-        run: npx playwright install --with-deps chromium
+        run: pnpm exec playwright install --only-shell
       - name: Build website
-        run: npm run build
+        run: pnpm run build
       - uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
         if: github.ref == 'refs/heads/main'
         with:
