--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@fontsource/inter": "^5.2.8",
     "@fontsource/poppins": "^5.2.7",
+    "@lorenzo_lewis/starlight-utils": "^0.3.2",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.15.2",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "mermaid": "^11.12.0",
     "playwright": "^1.56.1",
     "rehype-mermaid": "^3.0.0",
@@ -29,7 +32,7 @@
   },
   "devDependencies": {
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.3.0",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-organize-imports": "^4.3.0"
   }
 }
