--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.9",
+    "@astrojs/preact": "^4.1.2",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/starlight": "^0.36.1",
     "@astrojs/starlight-tailwind": "^4.0.1",
@@ -25,6 +26,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "mermaid": "^11.12.0",
     "playwright": "^1.56.1",
+    "preact": "^10.27.2",
     "rehype-mermaid": "^3.0.0",
     "sharp": "^0.34.4",
     "starlight-links-validator": "^0.19.0",
