--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@astrojs/starlight-tailwind": "^4.0.1",
     "@fontsource/inter": "^5.2.8",
     "@fontsource/poppins": "^5.2.7",
+    "@iconify-json/lucide": "^1.2.73",
     "@lorenzo_lewis/starlight-utils": "^0.3.2",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.15.2",
+    "astro-icon": "^1.1.5",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "mermaid": "^11.12.0",
