--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "astro-icon": "^1.1.5",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
+    "github-buttons": "^2.29.1",
     "mermaid": "^11.12.0",
     "playwright": "^1.56.1",
     "preact": "^10.27.2",
