chore: migrate assets to assets folder
Signed-off-by: Philip <pmig@glasskube.com>

--- a/.github/workflows/website.yaml
+++ b/.github/workflows/website.yaml
@@ -45,7 +45,7 @@ jobs:
         with:
           aws-region: eu-central-1
           role-to-assume: arn:aws:iam::639130800065:role/github-actions-distr.sh
-      - name: Deploy assets
+      - name: Deploy hashed assets
         if: github.ref == 'refs/heads/main'
         run: >-
           aws s3 sync dist/_astro s3://distr.sh/_astro/
