--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.9",
+    "@astrojs/mdx": "^4.3.10",
     "@astrojs/partytown": "^2.1.4",
-    "@astrojs/preact": "^4.1.2",
+    "@astrojs/preact": "^4.1.3",
     "@astrojs/sitemap": "^3.6.0",
-    "@astrojs/starlight": "^0.36.1",
-    "@astrojs/starlight-tailwind": "^4.0.1",
+    "@astrojs/starlight": "^0.36.2",
+    "@astrojs/starlight-tailwind": "4.0.2",
     "@fontsource/inter": "^5.2.8",
     "@fontsource/poppins": "^5.2.7",
     "@iconify-json/lucide": "^1.2.73",
     "@lorenzo_lewis/starlight-utils": "^0.3.2",
     "@tailwindcss/vite": "^4.1.14",
-    "astro": "^5.15.2",
+    "astro": "^5.15.6",
     "astro-icon": "^1.1.5",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
