--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.15.9",
     "astro-icon": "^1.1.5",
+    "astrojs-service-worker": "^2.0.0",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "github-buttons": "^2.29.1",
