--- a/renovate.json
+++ b/renovate.json
@@ -3,14 +3,18 @@
   "extends": ["config:recommended"],
   "packageRules": [
     {
-      "matchManagers": ["npm", "github-actions"],
+      "matchManagers": ["github-actions"],
+      "automerge": true
+    },
+    {
+      "matchManagers": ["npm"],
       "matchDepTypes": ["devDependencies"],
       "matchUpdateTypes": ["minor", "patch"],
       "matchCurrentVersion": "!/^0/",
       "automerge": true
     },
     {
-      "matchManagers": ["npm", "github-actions"],
+      "matchManagers": ["npm"],
       "matchUpdateTypes": ["patch"],
       "automerge": true
     }
