feat: add recaptcha scoring
Signed-off-by: Philip <pmig@glasskube.com>

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 # Local Development Environment Variables
 
 FORMS_SERVER=http://localhost:8081/api/v1
+RE_CAPTCHA_KEY=6LecoxYsAAAAACNtihvIDkeEQyJPqZYucPl3An6U
