--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 # Production Environment Variables
 
 FORMS_SERVER=https://forms.glasskube.com/api/v1
+RE_CAPTCHA_KEY=6Ld7qhYsAAAAAKAobW5zctLasGH5dK2v7GGTdvVl
