--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@
 
 FORMS_SERVER=https://forms.glasskube.com/api/v1
 RE_CAPTCHA_KEY=6Ld7qhYsAAAAAKAobW5zctLasGH5dK2v7GGTdvVl
+RE_CAPTCHA_KEY_v2=6LecChssAAAAALyRZ9s_BIGaYVd-A6iyubazWmw0
