--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.13",
     "@astrojs/preact": "^4.1.3",
-    "@astrojs/sitemap": "^3.6.1",
+    "@astrojs/sitemap": "3.7.0",
     "@astrojs/starlight": "0.37.3",
     "@astrojs/starlight-tailwind": "4.0.2",
     "@fontsource/inter": "^5.2.8",
@@ -22,7 +22,7 @@
     "@iconify-json/lucide": "^1.2.85",
     "@lorenzo_lewis/starlight-utils": "^0.3.2",
     "@tailwindcss/vite": "^4.1.18",
-    "astro": "^5.16.9",
+    "astro": "5.16.11",
     "astro-icon": "^1.1.5",
     "astrojs-service-worker": "^2.0.0",
     "embla-carousel": "^8.6.0",
